# Email-Triage-Environment

./: .gitignore  Dockerfile  README.md  baseline.py  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  verify.py
documentation/: round_1-pre_submission_checklist.md  round_1_guide.md  round_1_problem_statement.md
email_triage_env/: __init__.py  client.py  models.py
email_triage_env/server/: Dockerfile  app.py  email_environment.py  tasks.py
server/: Dockerfile  app.py  email_environment.py  tasks.py
