[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv email triage environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["email_triage_env*", "server*"]
 